# Visual-Sudoku-Solver

./: .gitignore  CMakeLists.txt  README.md  digitclassifier.cpp  digitclassifier.hpp  digitextractor.cpp  digitextractor.hpp  drawutils.hpp  geometricutils.hpp  knndigitclassifier.cpp  knndigitclassifier.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  nndigitclassifier.cpp  nndigitclassifier.hpp  savedialog.cpp  savedialog.hpp  settings.hpp  sudokufinder.cpp  sudokufinder.hpp  svmdigitclassifier.cpp  svmdigitclassifier.hpp  typedefs.hpp
classifiers/: svm.classifier  svm3.classifier
include/: CMakeLists.txt  settings.hpp  sudoku.h  typedefs.hpp
include/classification/: CMakeLists.txt  digitclassifier.hpp  knndigitclassifier.hpp  nndigitclassifier.hpp  svmdigitclassifier.hpp
include/gui/: CMakeLists.txt  mainwindow.hpp  processthread.hpp
include/imgproc/: CMakeLists.txt  digitextractor.hpp  sudokufinder.hpp
include/solver/: CMakeLists.txt  sudoku.hpp
include/utils/: CMakeLists.txt  drawutils.hpp  geometricutils.hpp  qtopencv.hpp
report/: report.aux  report.out  report.tex
source/: CMakeLists.txt  main.cpp  sudoku.cpp
source/classification/: CMakeLists.txt  digitclassifier.cpp  knndigitclassifier.cpp  nndigitclassifier.cpp  svmdigitclassifier.cpp
source/gui/: CMakeLists.txt  mainwindow.cpp  processthread.cpp  savedialog.cpp
source/imgproc/: CMakeLists.txt  digitextractor.cpp  sudokufinder.cpp
source/solver/: CMakeLists.txt  sudoku.cpp
source/utils/: CMakeLists.txt  drawutils.cpp
ui/: CMakeLists.txt  mainwindow.ui  savedialog.ui
